<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/scrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?scrimBackground" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bottom_sheet"
        style="?materialCardViewFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:shapeAppearance="@style/ShapeAppearance.ETranslation.BottomSheet">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="300dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/title"
                style="?textAppearanceTitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/controller_dashboard_start_translation_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/from_label"
                style="?textAppearanceTitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/controller_dashboard_start_translation_title_from"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/from_flags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/from_label"
                tools:text="🇺🇸" />

            <TextView
                android:id="@+id/to_chip_group_label"
                style="?textAppearanceTitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/controller_dashboard_start_translation_title_to"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/from_flags" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/to_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/to_chip_group_label"
                app:selectionRequired="true"
                app:singleSelection="true" />

            <TextView
                android:id="@+id/warning_text_view"
                style="?textAppearanceBodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/to_chip_group"
                tools:text="2 documents skipped\n1 document disappeared under mysterious circumstances" />

            <TextView
                android:id="@+id/label1"
                style="?textAppearanceLabelSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/controller_dashboard_start_translation_body_reminder"
                app:layout_constraintBottom_toTopOf="@id/translate_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/enable_notifications_button"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/controller_dashboard_start_translation_button_enable_notifications"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/translate_button"
                app:layout_constraintEnd_toStartOf="@id/translate_button"
                app:layout_constraintTop_toTopOf="@id/translate_button"
                tools:visibility="visible" />

            <Button
                android:id="@+id/translate_button"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="?colorTertiaryContainer"
                android:enabled="false"
                android:text="@string/controller_dashboard_start_translation_button_translate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/controller_dashboard_start_translation_button_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>