<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScrollTargetViewId="@id/recycler_view">

        <FrameLayout
            android:id="@+id/app_bar_container"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:menu="@menu/menu_dashboard_documents"
                app:title="@string/controller_dashboard_documents_title"
                app:titleCentered="true" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/context_app_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:tag="transition_exclude"
                android:visibility="gone"
                app:navigationIcon="@drawable/ic_baseline_close_24" />
        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="8dp"
            tools:listitem="@layout/item_dashboard_document" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/no_accounts_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:lineSpacingExtra="16sp"
        android:text="@string/controller_dashboard_documents_no_accounts"
        android:textAppearance="?textAppearanceBodyLarge"
        android:textStyle="italic"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/no_documents_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:lineSpacingExtra="16sp"
        android:text="@string/controller_dashboard_documents_no_documents"
        android:textAppearance="?textAppearanceBodyLarge"
        android:textStyle="italic"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/translate_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="?colorTertiaryContainer"
        android:text="@string/controller_dashboard_documents_fab_translate"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>