<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="?colorSurface"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScrollTargetViewId="@id/recycler_view">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            tools:title="@string/controller_dashboard_accounts_view_s4h_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="0dp"
        android:layout_height="192dp"
        android:contentDescription="@string/controller_dashboard_accounts_view_profile_picture_content_description"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <TextView
        android:id="@+id/account_id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        tools:text="feb4a65e-5634-477a-a3f1-f167148093eb" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_out_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/controller_dashboard_accounts_view_button_remove_account"
        app:layout_constraintEnd_toEndOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="@id/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/account_id_text_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_deprecated_resources_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/controller_dashboard_accounts_view_button_delete_deprecated_resources"
        app:layout_constraintEnd_toEndOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="@id/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/log_out_button" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_deprecated_resources_button"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fix_account_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/controller_dashboard_accounts_view_button_fix_login"
        android:visibility="invisible"
        app:icon="@drawable/ic_baseline_error_24"
        app:iconTint="@color/error_or_disabled"
        app:layout_constraintEnd_toEndOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="@id/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/fix_account_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/controller_dashboard_accounts_view_warning_fix_account"
        android:textAppearance="?textAppearanceLabelMedium"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/fix_account_button"
        app:layout_constraintStart_toStartOf="@id/fix_account_button"
        app:layout_constraintTop_toBottomOf="@id/fix_account_button"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>